<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>high_frequency_callback</name>
  <version>0.0.1</version>
  <description>ROS 2 node that runs a timer callback based on a service request.</description>
  <maintainer email="takayuki.akamine@tier4.jp">Takayuki AKAMINE</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>high_frequency_program_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>