<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_dummy_diagnostics_publisher</name>
  <version>0.0.1</version>
  <description>A dummy diagnostics publisher for ROS 2</description>
  <maintainer email="takayuki.akamine@tier4.jp">Takayuki AKAMINE</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>diagnostic_updater</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>